debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium

  * dh/dh_auto_*: Apply patch from "Dhole" to define
    SOURCE_DATE_EPOCH.  (Closes: #791823)

 -- Niels Thykier <niels@thykier.net>  Wed, 12 Aug 2015 10:46:59 +0200

debhelper (9.20150811) unstable; urgency=medium

  * d/changelog: Add missing entry for dh_md5sums/#786695 in
    the 9.20150628 release.
  * Makefile: Set LC_ALL=C when sorting.
  * dh: Avoid passing --parallel to other debhelper commands
    if it is the only option and "parallel" is not set (or
    set to 1) in DEB_BUILD_OPTIONS.
  * dh_strip: Apply patch from Guillem Jover to fix a typo.
    (Closes: #792207)
  * dh_makeshlibs: Avoid an uninitialised warning in some
    error cases.  Thanks to Jakub Wilk for reporting it.
    (Closes: #793092)
  * Dh_Lib.pm: Apply patch from Guillem Jover to use the
    value of dpkg-architecture variables from the environment,
    if present.  (Closes: #793440)
  * Dh_Buildsystems.pm/Dh_Lib.pm: Import Exporter's import
    subroutine rather than adding Exporter to @ISA.
  * Dh_Lib.pm: Use Dpkg::Arch's debarch_is rather than running
    dpkg-architecture to determine if an architecture matches
    a wildcard.  Heavily based on a patch from Guillem Jover.
    (Closes: #793443)
  * dh_strip: Always compress debug sections of debug symbols
    in ddebs.
  * dh_strip: Strip ".comment" and ".note" sections from static
    libraries.  Thanks to Helmut Grohne for the suggestion.
    (Closes: #789351)
  * dh_gencontrol: Stop explicitly passing -DSource to
    dpkg-gencontrol when building ddebs.  The passed value was
    wrong sometimes (e.g. with binNMUs) and dpkg-gencontrol
    since 1.18.2~ computes the value correctly.
  * d/control: Bump dependency on dpkg-dev to 1.18.2~ for
    ddebs.  Build-depends not bumped since debhelper itself
    does not produce any ddebs.
  * dh_makeshlibs: Continue generating reports from
    dpkg-gensymbols after the first error.  This helps